--- a/Tailwin-Css/src/index.css
+++ b/Tailwin-Css/src/index.css
@@ -13,5 +13,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: seagreen;
+    /* background: seagreen; */
+    /* background-image: url(); */
 }
